# eucalyptus-cloud-libs

./: .gitignore  HI  Makefile.in  README  configure.ac  eucalyptus-cloud-libs.spec  eucalyptus-java-deps.spec
licenses/: activemq-core-5.4.1.jar.LICENSE  ant-1.7.jar.LICENSE  antlr-3.0.1.jar.LICENSE  antlrall.jar.LICENSE  avalon-framework-4.2.0.jar.LICENSE  aws-java-sdk-1.5.0.jar.LICENSE  aws-java-sdk-s3-1.11.61.jar.LICENSE  aws-swf-build-tools-1.1.jar.LICENSE  axiom-dom-1.2.8.jar.LICENSE  backport-util-concurrent-2.2.jar.LICENSE  bcel-5.2.jar.LICENSE  bcel-6.0-SNAPSHOT-1692775.jar.LICENSE  bcel-6.0.jar.LICENSE  bcpkix-jdk15on-150.jar.LICENSE  bcpkix-jdk15on-155.jar.LICENSE  bcprov-jdk15on-1.49.jar.LICENSE  bsf-2.4.0.jar.LICENSE  btm-2.1.3.jar.LICENSE  cassandra-driver-core-3.1.2.jar.LICENSE  cglib-2.1.3.jar.LICENSE  commons-beanutils-1.8.3.jar.LICENSE  commons-codec-1.10.jar.LICENSE  commons-codec-1.4.jar.LICENSE  commons-codec-1.7.jar.LICENSE  commons-collections3-3.2.1.jar.LICENSE  commons-compress-1.5.jar.LICENSE  commons-digester-1.8.1.jar.LICENSE  commons-discovery-0.4.jar.LICENSE  commons-fileupload-1.2.1.jar.LICENSE  commons-fileupload-1.3.jar.LICENSE  commons-httpclient-3.1.jar.LICENSE  commons-io-1.4.jar.LICENSE  commons-io-2.4.jar.LICENSE  commons-jxpath-1.2.jar.LICENSE  commons-lang-2.6.jar.LICENSE  commons-logging-1.1.1.jar.LICENSE  commons-logging-api-1.1.1.jar.LICENSE  commons-pool-1.4.jar.LICENSE  commons-pool-1.6.jar.LICENSE  dnsjava-2.1.4.jar.LICENSE  (+104 more)
